--- a/Homework 11/pyproject.toml
+++ b/Homework 11/pyproject.toml
@@ -7,10 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Flask = "^2.2.2"
 marshmallow = "^3.18.0"
 Flask-SQLAlchemy = "^2.5.1"
 Flask-Migrate = "^3.1.0"
+bcrypt = "^4.0.0"
+dotenv = "^0.0.5"
+update = "^0.0.1"
 
 
 [build-system]
